tests/adapters/snapshots/main__adapters__parameters__high.snap
---
source: tests/adapters/parameters.rs
expression: "adapter.apply(input, &request)"
---
Some(
    0.9,
)
