tests/adapters/snapshots/main__adapters__parameters__low.snap
---
source: tests/adapters/parameters.rs
expression: "adapter.apply(input, &request)"
---
Some(
    0.1,
)
