tests/adapters/snapshots/main__adapters__parameters__max_tokens_adapter.snap
---
source: tests/adapters/parameters.rs
expression: "adapter.adapt_max_tokens(1024, &request)"
---
Some(
    1124,
)
