tests/adapters/snapshots/main__adapters__parameters__temp_adapter.snap
---
source: tests/adapters/parameters.rs
expression: "adapter.apply(Some(0.5), &request)"
---
Some(
    0.99,
)
